<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Your Commitment</string>
    <string name="name">yourcommitment</string>
    <string name="app_id">223989664321682</string>
    <string name="opcion1">opcion1</string>
    <string name="hi">hi</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="imagen">imagen</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="amountUser">Presupuesto inicial:</string>
    <string name="donationAmountUser">Donaciones</string>
    <string name="title_activity_proyects">ProyectsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_proyect">DetailProyectActivity</string>
    <string name="title_activity_splash">YourCommitment</string>
    <string name="subtitulo">¿Te gusta comprometerte?</string>
    <string name="creditos">CyliconValley</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="texto_hint">Donations</string>
    <string name="description_image">Descripcion imagen</string>
    <string name="mundo">Mundo</string>
    <string name="perfil">Perfil</string>
    <string name="donaciones">Donaciones</string>
    <string name="proyectos">Proyectos</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="title_activity_login_failed">LoginFailedActivity</string>
    <string name="try_to_login">Log again with facebook!</string>
    <string name="login_failed_please_try_again">Login Failed! Please try again...</string>
    <string name="map">AQUI VA UN MAPA</string>
    <string name="zeroEuros">0.0&#8364;</string>
    <string name="euros">&#8364;</string>
    <string name="tituloTablaDonaciones">Lista de Donaciones</string>
    <string name="userName">Nombre</string>
    <string name="userEmail">E-mail</string>
    <string name="userNameLabel">Nombre:</string>
    <string name="userEmailLabel">E-mail:</string>
    <string name="tituloTablaProyectos">Lista de Proyectos</string>
    <string name="tituloUser">Datos usuario</string>
    <string name="nombre_del_proyecto">Nombre del proyecto</string>
    <string name="mozambique">Mozambique</string>
    <string name="descripci_n_del_proyecto">Descripción del proyecto</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie, nibh gravida iaculis dapibus, risus risus facilisis libero, ac euismod dolor massa et nisl. Nunc molestie sem vel tellus consequat tempus. Cras interdum rutrum erat, vitae semper tortor accumsan tempor. In molestie volutpat lacus tempus luctus. </string>
    <string name="confirm_donar">Donar !</string>
    <string name="donar">Dona!</string>
    <string name="terminado">Terminado</string>
    <string name="recaudado">Recaudado</string>
    <string name="total">Total</string>
    <string name="ver_actualizaciones">actualizaciones</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="tituloTablaActualizaciones">Lista de actualizaciones para el proyecto</string>
    <string name="tituloONGs">Organizations</string>
    <string name="ongs">ONGs</string>
    <string name="introduce_una_cantidad_">Introduce una cantidad...</string>
    <string name="enviar_una_notificaci_n">Enviar una notificación</string>
    <string name="recargar">Recarga</string>
</resources>