<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/orange"
            android:drawableLeft="@drawable/logobar"
            android:text="@string/name" />

        <TextView
            android:id="@+id/amountLeft"
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkOrange"
            android:text="@string/_0_0_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/profile"
            style="@style/itemMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/profileicon"
            android:text="@string/perfil" />

        <TextView
            android:id="@+id/proyects"
            style="@style/itemMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/acceptprojectsicon"
            android:text="@string/proyectos" />

        <TextView
            android:id="@+id/map"
            style="@style/itemMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/btn_star"
            android:text="@string/mundo" />
    </LinearLayout>

</LinearLayout>