<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".SplashActivity" >

    <ImageView
        android:id="@+id/ImagenViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/splash" />

    <ImageView
        android:id="@+id/ImagenViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
<<<<<<< HEAD
        android:src="@drawable/logobar" />

    <TextView
        android:id="@+id/TextViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImagenViewLogo"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tituloApp" />

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/grid" >

        <TableRow
            android:id="@+id/TableRowFila1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/ImageViewMini1"
                android:layout_width="84dp"
                android:layout_height="66dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mini_1" />

            <ImageView
                android:id="@+id/ImageViewMini2"
                android:layout_width="84dp"
                android:layout_height="66dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mini_2" />

            <ImageView
                android:id="@+id/ImageViewMini3"
                android:layout_width="84dp"
                android:layout_height="66dp"
                android:src="@drawable/mini_3" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRowFila2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageViewMini4"
                android:layout_width="84dp"
                android:layout_height="66dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mini_4" />

            <ImageView
                android:id="@+id/ImageViewMini5"
                android:layout_width="84dp"
                android:layout_height="66dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mini_5" />

            <ImageView
                android:id="@+id/ImageViewMini6"
                android:layout_width="84dp"
                android:layout_height="66dp"
                android:src="@drawable/mini_6" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/TextViewSubtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextViewPie"
        android:gravity="center_horizontal"
        android:text="@string/subtitulo"
        android:textColor="@android:color/white"
        android:textSize="@dimen/subtitulo_splash" />
=======
        android:src="@drawable/launchicon" />
>>>>>>> b60c835f08c35241c192aa0a6114bbe72c82f126

    <TextView
        android:id="@+id/TextViewPie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:text="@string/creditos"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</RelativeLayout>